# csg5-chatacademico-python

./: .dockerignore  .gitignore  Dockerfile  README.md  appspec.yaml  appspec.yml  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: main.yaml
app/: __init__.py  config.py
app/apis/: __init__.py
app/apis/chat/: __init__.py  controller.py  dto.py  events.py  repository.py  service.py
app/apis/message/: repository.py  service.py
app/base/auth/: decorators.py  mock.py  service.py
app/errors/client/: base.py
app/errors/client/custom/: __init__.py
app/ext/: __init__.py  auth.py  modifiers.py
app/models/: Chat.py  Message.py  __init__.py
infra/: codedeploy.tf  csg5-chatacademico-key-pair  ec2.tf  elb.tf  keypair.tf  main.tf  network.tf  role.tf  s3.tf  terraform.tfstate.backup
migrations/versions/: c84eab84fcda_.py
scripts/: install_dependencies.sh  start_server.sh  stop_server.sh
