[tool.poetry]
name = "csg5-chatacademico-python"
version = "0.1.0"
description = "Facilita a comunicação direta entre alunos e professores, apoiando o processo de ensino e aprendizado, o que é fundamental para o domínio do negócio."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.3.3"
flask-sqlalchemy = "^3.1.1"
flask-cors = "^4.0.0"
flask-migrate = "^4.0.5"
alembic = "^1.12.0"
python-dotenv = "^1.0.0"
flask-restx = "^1.1.0"
flask-socketio = "^5.3.6"
python-engineio = "^4.7.1"
python-socketio = "^5.9.0"
gunicorn = "^21.2.0"
eventlet = "^0.33.3"
psycopg2-binary = "^2.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
